--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>D:\eclipse\OpenCart\TestNG2.xml</span>
+                    <span>D:\eclipse\Automation_Framework\TC003_LoginDataDivenTest.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">6 methods, 2 failed,   4 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Invalid)">LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="LoginDataDrivenTest(ssDemo13@gmail.com, demo13, Valid)">LoginDataDrivenTest(ssDemo13@gmail.com, demo13, Valid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +122,22 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC002_LoginTest" class="method navigator-link" hash-for-method="loginTest">loginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="LoginDataDrivenTest(ssDemo12@gmail.com, demo12, Invalid)">LoginDataDrivenTest(ssDemo12@gmail.com, demo12, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="LoginDataDrivenTest(ssDemo125@gmail.com, demo125, Valid)">LoginDataDrivenTest(ssDemo125@gmail.com, demo125, Valid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="LoginDataDrivenTest(ssDemo14@gmail.com, demo14, Invalid)">LoginDataDrivenTest(ssDemo14@gmail.com, demo14, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_LoginDataDrivenTest" class="method navigator-link" hash-for-method="LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Valid)">LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Valid)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -118,17 +152,76 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">testCases.TC002_LoginTest</span>
+              <img src="failed.png"/>
+              <span class="class-name">testCases.TC003_LoginDataDrivenTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTest">
-                  </a> <!-- loginTest -->
-                  <span class="method-name">loginTest</span>
+                  <a name="LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Invalid)">
+                  </a> <!-- LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Invalid) -->
+                  <span class="method-name">LoginDataDrivenTest</span>
+                  <span class="parameters">(ssDemo123@gmail.com,demo123,Invalid)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at testCases.TC003_LoginDataDrivenTest.LoginDataDrivenTest(TC003_LoginDataDrivenTest.java:62)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LoginDataDrivenTest(ssDemo13@gmail.com, demo13, Valid)">
+                  </a> <!-- LoginDataDrivenTest(ssDemo13@gmail.com, demo13, Valid) -->
+                  <span class="method-name">LoginDataDrivenTest</span>
+                  <span class="parameters">(ssDemo13@gmail.com,demo13,Valid)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at testCases.TC003_LoginDataDrivenTest.LoginDataDrivenTest(TC003_LoginDataDrivenTest.java:50)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">testCases.TC003_LoginDataDrivenTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="LoginDataDrivenTest(ssDemo12@gmail.com, demo12, Invalid)">
+                  </a> <!-- LoginDataDrivenTest(ssDemo12@gmail.com, demo12, Invalid) -->
+                  <span class="method-name">LoginDataDrivenTest</span>
+                  <span class="parameters">(ssDemo12@gmail.com,demo12,Invalid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LoginDataDrivenTest(ssDemo125@gmail.com, demo125, Valid)">
+                  </a> <!-- LoginDataDrivenTest(ssDemo125@gmail.com, demo125, Valid) -->
+                  <span class="method-name">LoginDataDrivenTest</span>
+                  <span class="parameters">(ssDemo125@gmail.com,demo125,Valid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LoginDataDrivenTest(ssDemo14@gmail.com, demo14, Invalid)">
+                  </a> <!-- LoginDataDrivenTest(ssDemo14@gmail.com, demo14, Invalid) -->
+                  <span class="method-name">LoginDataDrivenTest</span>
+                  <span class="parameters">(ssDemo14@gmail.com,demo14,Invalid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Valid)">
+                  </a> <!-- LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Valid) -->
+                  <span class="method-name">LoginDataDrivenTest</span>
+                  <span class="parameters">(ssDemo123@gmail.com,demo123,Valid)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +229,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\eclipse\OpenCart\TestNG2.xml</span>
+            <span class="header-content">D:\eclipse\Automation_Framework\TC003_LoginDataDivenTest.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +240,7 @@
   &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC002_LoginTest&quot;/&gt;
+      &lt;class name=&quot;testCases.TC003_LoginDataDrivenTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -187,16 +280,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginTest')
-data.setCell(0, 2, 'testCases.TC002_LoginTest')
-data.setCell(0, 3, 1641);
+data.setCell(0, 1, 'LoginDataDrivenTest')
+data.setCell(0, 2, 'testCases.TC003_LoginDataDrivenTest')
+data.setCell(0, 3, 11470);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'LoginDataDrivenTest')
+data.setCell(1, 2, 'testCases.TC003_LoginDataDrivenTest')
+data.setCell(1, 3, 11372);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'LoginDataDrivenTest')
+data.setCell(2, 2, 'testCases.TC003_LoginDataDrivenTest')
+data.setCell(2, 3, 11078);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'LoginDataDrivenTest')
+data.setCell(3, 2, 'testCases.TC003_LoginDataDrivenTest')
+data.setCell(3, 3, 2492);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'LoginDataDrivenTest')
+data.setCell(4, 2, 'testCases.TC003_LoginDataDrivenTest')
+data.setCell(4, 3, 2391);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'LoginDataDrivenTest')
+data.setCell(5, 2, 'testCases.TC003_LoginDataDrivenTest')
+data.setCell(5, 3, 2205);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 41 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -222,18 +335,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC002_LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC003_LoginDataDrivenTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">loginTest</span>
-                <span class="method-start">4521 ms</span>
+                <span class="method-name">LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Valid)</span>
+                <span class="method-start">6980 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">LoginDataDrivenTest(ssDemo12@gmail.com, demo12, Invalid)</span>
+                <span class="method-start">9373 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">LoginDataDrivenTest(ssDemo13@gmail.com, demo13, Valid)</span>
+                <span class="method-start">20451 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">LoginDataDrivenTest(ssDemo14@gmail.com, demo14, Invalid)</span>
+                <span class="method-start">31840 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">LoginDataDrivenTest(ssDemo125@gmail.com, demo125, Valid)</span>
+                <span class="method-start">43310 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">LoginDataDrivenTest(ssDemo123@gmail.com, demo123, Invalid)</span>
+                <span class="method-start">45804 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">6165 ms</span>
+                <span class="method-start">48011 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
