--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,36 +8,32 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Master Suite</th></tr>
-<tr><td><a href="#t0">Master Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">6</td><td class="num">22,549</td><td>Master</td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Firefox - Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,427</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Chrome - Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">18,213</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Edge - Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">19,362</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">1</th><th class="num">0</th><th class="num">0</th><th class="num attn">2</th><th class="num">54,002</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Master Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Master Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.TC001_AccountRegistration</td><td><a href="#m0">verify_Account_Registration</a></td><td rowspan="1">1723735399888</td><td rowspan="1">2408</td></tr><tr class="failedodd"><td rowspan="5">testCases.TC003_LoginDataDrivenTest</td><td><a href="#m1">LoginDataDrivenTest</a></td><td rowspan="5">1723735417975</td><td rowspan="5">469</td></tr><tr class="failedodd"><td><a href="#m2">LoginDataDrivenTest</a></td></tr><tr class="failedodd"><td><a href="#m3">LoginDataDrivenTest</a></td></tr><tr class="failedodd"><td><a href="#m4">LoginDataDrivenTest</a></td></tr><tr class="failedodd"><td><a href="#m5">LoginDataDrivenTest</a></td></tr><tr><th colspan="4">Master Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC002_LoginTest</td><td><a href="#m6">loginTest</a></td><td rowspan="1">1723735407559</td><td rowspan="1">1636</td></tr><tr class="passedodd"><td rowspan="1">testCases.TC003_LoginDataDrivenTest</td><td><a href="#m7">LoginDataDrivenTest</a></td><td rowspan="1">1723735414781</td><td rowspan="1">3193</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Firefox - Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC001_AccountRegistration</td><td><a href="#m0">verify_Account_Registration</a></td><td rowspan="1">1724565688564</td><td rowspan="1">3418</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Chrome - Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.TC001_AccountRegistration</td><td><a href="#m1">verify_Account_Registration</a></td><td rowspan="1">1724565684298</td><td rowspan="1">10048</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Edge - Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.TC001_AccountRegistration</td><td><a href="#m2">verify_Account_Registration</a></td><td rowspan="1">1724565684307</td><td rowspan="1">10086</td></tr></tbody>
 </table>
-<h2>Master Test</h2><h3 id="m0">testCases.TC001_AccountRegistration#verify_Account_Registration</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
-	at testCases.TC001_AccountRegistration.verify_Account_Registration(TC001_AccountRegistration.java:55)
+<h2>Firefox - Test</h2><h3 id="m0">testCases.TC001_AccountRegistration#verify_Account_Registration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Chrome - Test</h2><h3 id="m1">testCases.TC001_AccountRegistration#verify_Account_Registration</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
+	at testCases.TC001_AccountRegistration.verify_Account_Registration(TC001_AccountRegistration.java:51)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.TC003_LoginDataDrivenTest#LoginDataDrivenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>ssDemo12@gmail.com</td><td>demo12</td><td>Invalid</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.AssertionError: null
-	at testCases.TC003_LoginDataDrivenTest.LoginDataDrivenTest(TC003_LoginDataDrivenTest.java:69)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:831)
+... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Edge - Test</h2><h3 id="m2">testCases.TC001_AccountRegistration#verify_Account_Registration</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
+	at testCases.TC001_AccountRegistration.verify_Account_Registration(TC001_AccountRegistration.java:51)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testCases.TC003_LoginDataDrivenTest#LoginDataDrivenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>ssDemo14@gmail.com</td><td>demo14</td><td>Invalid</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.AssertionError: null
-	at testCases.TC003_LoginDataDrivenTest.LoginDataDrivenTest(TC003_LoginDataDrivenTest.java:69)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testCases.TC003_LoginDataDrivenTest#LoginDataDrivenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>ssDemo123@gmail.com</td><td>demo123</td><td>Invalid</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.AssertionError: null
-	at testCases.TC003_LoginDataDrivenTest.LoginDataDrivenTest(TC003_LoginDataDrivenTest.java:69)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testCases.TC003_LoginDataDrivenTest#LoginDataDrivenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>ssDemo13@gmail.com</td><td>demo13</td><td>Valid</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.AssertionError: null
-	at testCases.TC003_LoginDataDrivenTest.LoginDataDrivenTest(TC003_LoginDataDrivenTest.java:69)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">testCases.TC003_LoginDataDrivenTest#LoginDataDrivenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>ssDemo125@gmail.com</td><td>demo125</td><td>Valid</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.AssertionError: null
-	at testCases.TC003_LoginDataDrivenTest.LoginDataDrivenTest(TC003_LoginDataDrivenTest.java:69)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">testCases.TC002_LoginTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">testCases.TC003_LoginDataDrivenTest#LoginDataDrivenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>ssDemo123@gmail.com</td><td>demo123</td><td>Valid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:831)
+... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
